<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/colorSelectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/color_selection"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/colorViewBox"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSelectionTitle" />

    <LinearLayout
        android:id="@+id/colorHEXLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorViewBox">

        <TextView
            android:id="@+id/colorHEXLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_hex_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/colorHEXValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/color_hex_value"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorRGBLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorHEXLayout">

        <TextView
            android:id="@+id/colorRGBLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_rgb_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/colorRGBValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="4dp"
            android:text="@string/color_rgb_value"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorSelectionLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorRGBLayout">

        <LinearLayout
            android:id="@+id/colorBarLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/redBarLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red_bar_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/greenBarLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/green_bar_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/blueBarLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue_bar_label"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/colorBars"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/redSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:max="255"
                android:progress="64"
                android:progressTint="@android:color/holo_blue_light"
                android:thumbTint="@android:color/holo_blue_light" />

            <SeekBar
                android:id="@+id/greenSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="255"
                android:progress="128"
                android:progressTint="@android:color/holo_blue_light"
                android:thumbTint="@android:color/holo_blue_light" />

            <SeekBar
                android:id="@+id/blueSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:max="255"
                android:progress="0"
                android:progressTint="@android:color/holo_blue_light"
                android:thumbTint="@android:color/holo_blue_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/colorBarValues"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/redBarValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red_bar_value"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/greenBarValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/green_bar_value"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/blueBarValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blue_bar_value"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSelectionLayout">

        <Button
            android:id="@+id/whiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#D0D0D0"
            android:text="@string/white_button"
            android:textColor="#000000"
            app:cornerRadius="0dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/blackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#D0D0D0"
            android:text="@string/black_button"
            android:textColor="#000000"
            app:cornerRadius="0dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/blueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#D0D0D0"
            android:text="@string/blue_button"
            android:textColor="#000000"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#D0D0D0"
        android:text="@string/reset_button"
        android:textColor="#000000"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorButtonLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>